MSPSDS-937: Add create button for non-opss, fixed incorrect alignment

--- a/shared-web/app/assets/application/stylesheets/navbar.scss
+++ b/shared-web/app/assets/application/stylesheets/navbar.scss
@@ -50,7 +50,7 @@
   .creation {
     position: absolute;
     right: 4px;
-    top: 4px;
+    top: 15%;
     z-index: 1;
 
     .govuk-button--start {
